open-api schema generation, tags, added JSON schemas for CreateIdentityBody
